# atlas_gridwatch

./: .gitignore  README.md  debug_paths.py  debug_tg_api.py  pyproject.toml  requirements.txt
.github/workflows/: daily_brief.yml
data/: news_archive.db
data/processed/: cloud_infrastructure_map.json  infrastructure_master.json
data/raw/: cloud_infrastructure_map_raw.txt  seed_infrastructure.json
data/seeds/: frontier_ai_seed.json
docs/: atlas_gridwatch_map.html  ethics.md  index.html  map_subsea.html  methodology.md  roadmap.md
docs/research/: 2025-global-compute.html  2026-01-03-global-chokepoints.html  2026-01-04-global-compute-evolution.html  2026-01-05-hyperscalers-sovereign.html  cloud_infrastructure_data.md  index.html
docs/research/data_centers_epochAI/: README.md  data_center_chillers.csv  data_center_cooling_towers.csv  data_center_timelines.csv  data_centers.csv
papers/: 2025-global-compute.md  2026-01-03-global-chokepoints.md  2026-01-04-global-compute-evolution.md
scripts/analysis/: run_analysis.py
scripts/ingestion/: convert_json_to_md.py  parse_raw_cloud_map.py  run_ingestion.py  write_raw_data_pt1.py  write_raw_data_pt2.py  write_raw_data_pt3.py  write_raw_data_pt4.py  write_raw_data_pt5.py
scripts/reporting/: generate_brief.py  publish_paper.py
scripts/visualization/: run_visualization.py
src/atlas_gridwatch/: analysis.py  database.py  ingestion.py  ingestion_epoch.py  ingestion_rss.py  llm_analysis.py  models.py  normalization.py  reporting.py  visualization.py
src/atlas_gridwatch/templates/: brief_template.html  (+1 more)
