[project]
name = "atlas-gridwatch"
version = "0.1.0"
description = "Strategic Intelligence on Global Compute & Connectivity Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Atlas Gridwatch Team"}
]
dependencies = [
    "typer>=0.9.0",         # CLI Interface
    "pydantic>=2.5.0",      # Data Validation & Schema
    "pandas>=2.1.0",        # Data Analysis
    "polars>=0.19.0",       # High-performance Data Processing
    "rich>=13.0.0",         # Terminal Output
    "networkx>=3.1",        # Graph Analysis
    "shapely>=2.0.0",       # Geometric Operations
    "geopandas>=0.14.0",    # Geospatial Data
    "requests>=2.31.0",     # HTTP Client
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
